# TrafficIncidentMonitoring

./: PROMPTS.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  ai_engine.py  database.py  main.py  pyproject.toml
frontend/: Dockerfile  main.py  models.py  pyproject.toml
lab/: README.md  experiment.ipynb  pyproject.toml
