[project]
name = "traffic-incident-api"
version = "0.1.0"
description = "FastAPI Backend for Traffic Incident MVP"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "sqlmodel>=0.0.16",
    "aiosqlite>=0.19.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.9"
]

[tool.uv]
dev-dependencies = ["pytest", "httpx"]
